text-align bugfix

--- a/style.css
+++ b/style.css
@@ -116,6 +116,7 @@ body {
     color: var(--dark-background);
     font-size: 36px;
     font-weight: bolder;
+    text-align: center;
 }
 
 .main-images-container {
